<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/srcle"





    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="40sp"
        android:layout_weight="10"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/whit"
        android:background="@drawable/srcle">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@drawable/srcle">
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="20"
            android:background="@drawable/speaker">

        </TextView>
        <SeekBar
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:id="@+id/seekbarVolume"
            android:outlineAmbientShadowColor="@color/colorPrimaryDark"


            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="20"
        android:weightSum="100"
        android:background="@drawable/srcle">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:text="@string/select_a_player"
            android:textSize="27sp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:orientation="vertical"
            android:weightSum="100">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:weightSum="100">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:id="@+id/radioJampingBoy">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:checked="true"
                        android:onClick="chackButton"
                        android:id="@+id/jumpingboy1"
                        />


                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:onClick="chackButton"
                        android:id="@+id/jumpingboy2"


                        />

                </RadioGroup>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70"
                android:orientation="horizontal"
                android:weightSum="100">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:background="@drawable/princess_peach_standing"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="50"
                    android:layout_gravity="bottom"
                    android:background="@drawable/mario_standing"/>
            </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Use_of_Motion_Controll"
            android:textColor="@color/whit"
            android:layout_weight="70"
            android:textSize="20sp"

            >

        </TextView>
        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:id="@+id/motionControl_btn"
            android:background="@drawable/srcle"
            android:checked="true"
            android:textColor="@color/whit"
            >

        </ToggleButton>

    </LinearLayout>

    </LinearLayout>